# Synap

android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/java/com/fuwaki/synap/: MainActivity.kt
android/app/src/main/java/com/fuwaki/synap/ui/components/: NoteCardItem.kt
android/app/src/main/java/com/fuwaki/synap/ui/screens/: HomeScreen.kt  SettingsScreen.kt
android/app/src/main/java/com/fuwaki/synap/ui/viewmodel/: SettingsViewModel.kt
android/gradle/: rust-uniffi.gradle.kts
cli/: Cargo.toml
cli/src/: config.rs  main.rs  output.rs
cli/src/commands/: amend.rs  capture.rs  graph.rs  list.rs  mod.rs  reply.rs  scrub.rs  search.rs  show.rs  stats.rs  sync.rs  tag.rs  trace.rs  void.rs
cli/src/net/: conn.rs  mod.rs
core/: Cargo.toml  EXAMPLES.md  PLAN_SERVICE_SYNC_INTEGRATION.md  README.md  SYNC.md  build.rs  demo.rs
core/benches/: service_benchmark.rs
core/examples/: sync_demo.rs
core/src/: dto.rs  error.rs  lib.rs  service.rs  version.rs
core/src/db/: dagstorage.rs  kvstore.rs  mod.rs  onetomany.rs  setstore.rs  types.rs
core/src/models/: mod.rs  note.rs  tag.rs  util.rs
core/src/search/: mod.rs  searcher.rs  test.rs  types.rs
core/src/sync/: mod.rs  protocol.rs  service.rs  tests.rs
core/src/views/: mod.rs  note_view.rs  timeline_view.rs
coreffi/src/: lib.rs  service.rs  synap.udl  types.rs
desktop/: Cargo.toml  design.md
desktop/src/: app.rs  lib.rs  main.rs  message.rs  state.rs  theme.rs
desktop/src/core/: mod.rs
desktop/src/view/: canvas.rs  capture.rs  lens.rs  mod.rs  node_card.rs  stream.rs
