[package]
name = "synap-cli"
version = "0.1.0"
edition = "2018"
description = "A DAG-based minimal thought capture tool - Command Line Interface"
license = "MIT"
repository = "https://github.com/yourusername/synap"
authors = ["Synap Contributors"]
readme = "../README.md"
keywords = ["notes", "cli", "knowledge-management", "dag"]
categories = ["command-line-utilities"]

[[bin]]
name = "synap"
path = "src/main.rs"

[dependencies]
synap-core = { version = "0.1.0", path = "../core" }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
colored = "2.1"
directories = "5.0"
chrono = "0.4"
tempfile = "3"
uuid = { version = "1.22.0", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
