[package]
name = "synap-desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "synap-desktop"
path = "src/main.rs"

[lib]
name = "synap_desktop"
path = "src/lib.rs"

[dependencies]
synap-core = { version = "0.1.0", path = "../core" }
iced = { version = "0.14", features = ["canvas", "markdown"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
once_cell = "1"
